--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,21 @@ a{
     text-decoration: none;
 }
 @media screen and (max-width: 500px){
+    #erfarenhet{
+        display: grid;
+        grid-template-rows: 30vh repeat(3, 50vh) 10vh;
+    }
     #bodystart{
         display: grid;
         grid-template-rows: 100vh 90vh 10vh;
+    }
+    #ommig{
+        display: grid;
+        grid-template-rows: 30vh 20vh 30vh minmax(30vh, auto) 10vh;
+    }
+    #projekt{
+        display: grid; 
+        grid-template-rows: 30vh 50vh minmax(20vh, auto) 10vh;
     }
     #mainsec{
         display: flex;
@@ -26,6 +38,11 @@ a{
         align-items: center;
         justify-content: center;
     }
+
+    footer{
+        display: flex;
+        align-items: center;
+    }
 }
 @media screen and (min-width: 501px){
 
@@ -38,7 +55,7 @@ h2{
 .menu{
     height: 100vh;
     width: 70vw;
-    background: darkblue;
+    background: white;
     position: fixed;
     top: 0;
     left: -70vw;
@@ -81,4 +98,8 @@ img {
     object-fit: cover;
     height: 90vh;
     width: 100%;
+}
+
+#linkedin{
+    font-size: 8vh;
 }
