--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,24 @@ a{
         display: flex;
         align-items: center;
         justify-content: center;
+        border: black solid 1px;
     }
 
     footer{
         display: flex;
         align-items: center;
+        justify-content: space-evenly;
+    }
+    .menu-links{
+        width: 35vw;
+        height: 15vh;
+        background-color: darkblue;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: black solid 1px;
+        align-self: center;
     }
 }
 @media screen and (min-width: 501px){
@@ -62,14 +75,33 @@ h2{
     transition: left 0.3s;
     box-shadow: 10px 0px 21px -10px rgba(0,0,0,0.75);
     z-index: 10;
+    display: flex;
+    flex-direction: column;
 }
 .menu-button{
     cursor: pointer;
     display: inline;
+    position: fixed;
+    width: 3.5rem;
+    height: 3.5rem;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    border-radius: 5px;
+    border: black solid 1px;
 }
 
-.menu-button i.material-icons{
-    font-size: 2.5rem;
+.menu-button i{
+    font-size: 3.5rem;
+}
+
+.close-button{
+    margin: 10px;
+}
+
+.close-button i{
+    font-size: 3.5rem;
 }
 
 .show{
@@ -94,6 +126,7 @@ h2{
 #vitmenu{
     color: white;
 }
+
 img {
     object-fit: cover;
     height: 90vh;
