--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ a{
 @media screen and (max-width: 500px){
     #erfarenhet{
         display: grid;
-        grid-template-rows: 30vh 150vh 10vh;
+        grid-template-rows: 30vh auto 10vh;
     }
     #bodystart{
         display: grid;
@@ -72,6 +72,10 @@ a{
         flex-direction: column;
         align-items: center;
     }
+    .er_h2{
+        margin-left: 16px;
+    }
+
 }
 @media screen and (min-width: 501px){
 
@@ -98,8 +102,8 @@ h2{
     cursor: pointer;
     display: inline;
     position: fixed;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 2.6rem;
+    height: 2.6rem;
     background-color: white;
     justify-content: center;
     align-items: center;
@@ -109,15 +113,16 @@ h2{
 }
 
 .menu-button i{
-    font-size: 3.5rem;
+    font-size:2.6rem;
 }
 
 .close-button{
     margin: 10px;
+    width: 2.6rem;
 }
 
 .close-button i{
-    font-size: 3.5rem;
+    font-size: 2.6rem;
 }
 
 .show{
@@ -160,4 +165,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+#er_textsec{
+    max-width: 700px;
+    padding: 5vw;
 }
