--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ a{
         display: grid;
         grid-template-rows: 30vh auto 10vh;
     }
-    #bodystart{
+    #index{
         display: grid;
         grid-template-rows: 100vh 90vh 10vh;
     }
@@ -26,7 +26,7 @@ a{
         display: grid; 
         grid-template-rows: 30vh 50vh minmax(20vh, auto) 10vh;
     }
-    #mainsec{
+    #mainnav{
         display: flex;
         height: 100%;
         width: 100%;
@@ -45,11 +45,6 @@ a{
         border: black solid 1px;
     }
 
-    footer{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
     .menu-links{
         width: 50vw;
         height: 15vh;
@@ -72,7 +67,7 @@ a{
         border-radius: 5px;
         margin: 20px;
     }
-    #er_main{
+    .main_container{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -81,20 +76,49 @@ a{
         margin-left: 16px;
         margin-bottom: 0px;
     }
-    #download_container{
-        width: 30vw;
-        padding: 10px;
+
+    #prog_sec{
+        align-self: center;
+        height: auto;
+        width: 70vw;
+        background-color: var(--themeColor);
+        color: white;
+        display: flex;
+        flex-direction: column;
         border-radius: 5px;
+        margin: 20px;
     }
 
 }
 @media screen and (min-width: 501px){
     .link_hover:hover{
-        background-color: white !important;
-        color: var(--themeColor) !important;
+        background-color: black !important;
     }
     #linkedin:hover{
         color: black;
+    }
+
+    #erfarenhet{
+        display: grid;
+        grid-template-rows: 100vh 80vh 20vh;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: 
+        'hd hd hd'
+        'sec1 sec2 sec3'
+        'ft ft ft'
+        ;
+    }
+    #index{
+        display: grid;
+        grid-template-rows: 100vh 90vh 10vh;
+    }
+    #ommig{
+        display: grid;
+        grid-template-rows: 30vh 250px 30vh minmax(30vh, auto) 10vh;
+    }
+    #projekt{
+        display: grid; 
+        grid-template-rows: 30vh 50vh minmax(20vh, auto) 10vh;
     }
 }
 
@@ -184,7 +208,7 @@ img {
     align-items: center;
     justify-content: space-around;
 }
-.textsec{
+.text_sec{
     max-width: 700px;
     padding: 5vw;
 }
@@ -202,7 +226,6 @@ img {
     object-fit: fill;
     width: 200px;
     height: 200px;
-    aspect-ratio: 1/1;
     filter: grayscale(100%);
     align-self: center;
     border: black solid 2px;
@@ -212,4 +235,18 @@ ul{
 }
 li{
     margin: 2px;
+}
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#download_container{
+    width: min(30vw, 300px);
+    height: 7vh;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3vh;
 }
