--- a/css/style.css
+++ b/css/style.css
@@ -1,129 +1,50 @@
 :root{
-    --themeColor: darkblue;  
+    --themeColor: #003c54;  
 }
-
 
 body{
     margin: 0px;
+    font-family: "Kanit", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1.5rem;
 }
+
 a{
     text-decoration: none;
 }
-@media screen and (max-width: 500px){
-    #erfarenhet{
-        display: grid;
-        grid-template-rows: 30vh auto 10vh;
-    }
-    #index{
-        display: grid;
-        grid-template-rows: 100vh 90vh 10vh;
-    }
-    #ommig{
-        display: grid;
-        grid-template-rows: 30vh 250px 30vh minmax(30vh, auto) 10vh;
-    }
-    #projekt{
-        display: grid; 
-        grid-template-rows: 30vh 50vh minmax(20vh, auto) 10vh;
-    }
-    #mainnav{
-        display: flex;
-        height: 100%;
-        width: 100%;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    .linkdiv{
-        width: 90vw;
-        height: 20vh;
-        background-color: var(--themeColor);
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: black solid 1px;
-    }
 
-    .menu-links{
-        width: 50vw;
-        height: 15vh;
-        background-color: var(--themeColor);
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: black solid 1px;
-        align-self: center;
-        color: white;
-    }   
-    .ul_div{
-        height: auto;
-        width: 70vw;
-        background-color: var(--themeColor);
-        color: white;
-        display: flex;
-        flex-direction: column;
-        border-radius: 5px;
-        margin: 20px;
-    }
-    .main_container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .ul_h2{
-        margin-left: 16px;
-        margin-bottom: 0px;
-    }
-
-    #prog_sec{
-        align-self: center;
-        height: auto;
-        width: 70vw;
-        background-color: var(--themeColor);
-        color: white;
-        display: flex;
-        flex-direction: column;
-        border-radius: 5px;
-        margin: 20px;
-    }
-
-}
-@media screen and (min-width: 501px){
-    .link_hover:hover{
-        background-color: black !important;
-    }
-    #linkedin:hover{
-        color: black;
-    }
-
-    #erfarenhet{
-        display: grid;
-        grid-template-rows: 100vh 80vh 20vh;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-areas: 
-        'hd hd hd'
-        'sec1 sec2 sec3'
-        'ft ft ft'
-        ;
-    }
-    #index{
-        display: grid;
-        grid-template-rows: 100vh 90vh 10vh;
-    }
-    #ommig{
-        display: grid;
-        grid-template-rows: 30vh 250px 30vh minmax(30vh, auto) 10vh;
-    }
-    #projekt{
-        display: grid; 
-        grid-template-rows: 30vh 50vh minmax(20vh, auto) 10vh;
-    }
-}
 
 h2{
     color: white;
+    font-family: "Kanit", sans-serif;
+}
+
+.self-center{
+    align-self: center;
+    justify-self: center;
+}
+
+.link-div{
+    background-color: var(--themeColor);
+    display: flex;
+    border: black solid 1px;
+    border-radius: 5px;
+    color: white;
+    flex-direction: column;
+    border-radius: 5px;
+}
+.link-div p{
+    font-size: 1.3rem;
+    margin: 0px 50px 50px 50px;
+}
+
+
+#card-img{
+    width: 100%;
+    height: 35%;
+    border-radius: 3px 3px 0px 0px;
+    object-fit: cover;
 }
 
 .menu{
@@ -143,8 +64,9 @@ h2{
     cursor: pointer;
     display: inline;
     position: fixed;
-    width: 2.6rem;
-    height: 2.6rem;
+    display: flex;
+    width: 3.5rem;
+    height: 3.5rem;
     background-color: white;
     justify-content: center;
     align-items: center;
@@ -170,6 +92,16 @@ h2{
     left: 0;
 }
 
+.menu-links{
+    background-color: var(--themeColor);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: black solid 1px;
+    color: white;
+}   
+
 .fade-layer{
     position: fixed;
     top: 0;
@@ -189,10 +121,8 @@ h2{
     color: white;
 }
 
-img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
+.svart-text{
+    color: black;
 }
 
 #linkedin{
@@ -200,7 +130,7 @@ img {
     color: var(--themeColor);
 }
 
-#linkWrapper{
+#link-wrapper{
     display: flex;
     height: 90vh;
     width: 100%;
@@ -210,7 +140,8 @@ img {
 }
 .text_sec{
     max-width: 700px;
-    padding: 5vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
 }
 #download_container{
     color: white;
@@ -218,9 +149,7 @@ img {
     text-align: center;
     border: black solid 1px;
 }
-.hor_center{
-    justify-self: center;
-}
+
 #ansiktsimg{
     border-radius: 100px;
     object-fit: fill;
@@ -240,6 +169,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    background-color: white;
 }
 #download_container{
     width: min(30vw, 300px);
@@ -249,4 +179,234 @@ footer{
     align-items: center;
     justify-content: center;
     font-size: 3vh;
+}
+picture{
+    position: fixed;
+    z-index: -5;
+    height: 100vh;
+    width: 100vw;
+}
+#main-nav{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    border-top: black solid 2px;
+}
+
+.h1-container{
+    height: 100vh;
+    width: 100vw;
+    z-index: -5;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+h1{
+    font-size: 8vw;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgba(255,255,255,0.5);
+}
+.phone-background-img{
+    object-fit: cover;
+}
+img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+#current-link{
+    background-color: white;
+    color: black;
+}
+.ul_div{
+    background-color: var(--themeColor);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    border-radius: 5px;
+    margin: 20px;
+}
+.ul_h2{
+    margin-left: 16px;
+    margin-bottom: 0px;
+}
+#projekt{
+    display: grid; 
+    grid-template-rows: 30vh auto 10vh;
+}
+
+@media screen and (max-width: 500px){
+    #erfarenhet{
+        display: grid;
+        grid-template-rows: 30vh auto 10vh;
+    }
+    #index{
+        display: grid;
+        grid-template-rows: 100vh 90vh 10vh;
+    }
+    #ommig{
+        display: grid;
+        grid-template-rows: 30vh 300px auto auto 10vh;
+    }
+
+    .link-div{
+        width: 90vw;
+        height: 20vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h2{
+        font-size: smaller;
+    }
+
+    .menu-links{
+        width: 50vw;
+        height: 15vh;
+        background-color: var(--themeColor);
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: black solid 1px;
+        align-self: center;
+        color: white;
+    }   
+    .ul_div{
+        width: 70vw;
+    }
+    .main_container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #main-nav{
+        flex-direction: column;
+    }
+    .hide-on-phone{
+        display: none;
+    }
+}
+@media screen and (min-width: 501px){
+    .link-hover:hover{
+        background-color: black !important;
+    }
+    #linkedin:hover{
+        color: black;
+    }
+    
+    #erfarenhet{
+        display: grid;
+        grid-template-rows: 30vh auto 10vh;
+    }
+    #index{
+        display: grid;
+        grid-template-rows: 100vh 90vh 10vh;
+    }
+    #ommig{
+        display: grid;
+        grid-template-rows: 30vh 400px 50vh 20vh;
+        grid-template-columns: 900px 1fr;
+        grid-template-areas: 
+        'hd hd'
+        'tex profile'
+        'tex sc1'
+        'ft ft'
+        ;
+    }
+    .link-div{
+        width: 25vw;
+        height: 60vh;
+    }
+    #main-nav{
+        flex-direction: row;
+    }
+    .menu-links{
+        width: 30vw;
+        height: 15vh;
+        align-items: center;
+        justify-content: center;
+        border: black solid 1px;
+        color: white;
+    }  
+    #er-main-grid{
+        display: grid;
+        grid-template-rows: 40vh 40vh;
+        grid-template-columns: 40vw 60vw;
+        grid-template-areas: 
+        'sc1 sc3'
+        'sc2 sc3'
+        ;
+    }
+    #sc1{
+        grid-area: sc1;
+    }
+    #sc2{
+        grid-area: sc2; 
+    }
+    .ul_div{
+        width: min(90%, 500px);
+        font-size: 1.5rem;
+    }
+    .ul_div ul li{
+        margin-top: 15px;
+    }
+    #sc3{
+        grid-area: sc3;
+        width: 100%;
+        overflow: scroll;
+        overflow-x: hidden;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    #pro-grid{
+        display: grid;
+        grid-template-rows: 40vh 30vh 30vh;
+        grid-template-columns: 40vw 60vw;
+        grid-template-areas: 
+        'prog tex'
+        'img1 tex'
+        'img2 tex'
+        ;
+    }
+    #text-area{
+        grid-area: tex;
+        overflow: scroll;
+        overflow-x: hidden;
+    }
+    #prog-sec{
+        grid-area: prog;
+        width: 90%;
+    }
+    #pro-img1{
+        grid-area: img1;
+    }
+    #pro-img2{
+        grid-area: img2;
+    }
+    .pro-imgs{
+        border-radius: 10px;
+        height: 90%;
+        width: 90%;
+    }
+    #ansiktsimg{
+        grid-area: profile;
+        height: 300px;
+        width: 300px;
+        border-radius: 150px;
+    }
+    #ommig footer{
+        grid-area: ft;
+    }
+    #om-mig-hd{
+        grid-area: hd;
+    }
 }
