--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ h2{
     border-radius: 5px;
 }
 .link-div p{
-    font-size: 1.3rem;
-    margin: 0px 50px 50px 50px;
+    font-size: 1rem;
+    margin: 0px 10% 10% 10%;
 }
 
 
@@ -140,6 +140,7 @@ h2{
 }
 .text_sec{
     max-width: 700px;
+    max-height: 80vh;
     padding-left: 5vw;
     padding-right: 5vw;
 }
@@ -256,7 +257,7 @@ img {
 
     .link-div{
         width: 90vw;
-        height: 20vh;
+        height: auto;
         justify-content: center;
         align-items: center;
     }
@@ -279,6 +280,7 @@ img {
     }   
     .ul_div{
         width: 70vw;
+        height: auto;
     }
     .main_container{
         display: flex;
@@ -322,7 +324,7 @@ img {
     }
     .link-div{
         width: 25vw;
-        height: 60vh;
+        height: auto;
     }
     #main-nav{
         flex-direction: row;
@@ -336,8 +338,7 @@ img {
         color: white;
     }  
     #er-main-grid{
-        display: grid;
-        grid-template-rows: 40vh 40vh;
+        display: grid;  
         grid-template-columns: 40vw 60vw;
         grid-template-areas: 
         'sc1 sc3'
@@ -369,7 +370,6 @@ img {
     }
     #pro-grid{
         display: grid;
-        grid-template-rows: 40vh 30vh 30vh;
         grid-template-columns: 40vw 60vw;
         grid-template-areas: 
         'prog tex'
@@ -394,8 +394,9 @@ img {
     }
     .pro-imgs{
         border-radius: 10px;
-        height: 90%;
+        height: 30vh;
         width: 90%;
+        margin: 20px;
     }
     #ansiktsimg{
         grid-area: profile;
