--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h2{
 }
 
 
-#card-img{
+.card-img{
     width: 100%;
     height: 35%;
     border-radius: 3px 3px 0px 0px;
@@ -138,6 +138,7 @@ h2{
     justify-content: space-evenly;
     align-items: center;
 }
+
 .text_sec{
     max-width: 700px;
     padding: 20px;
@@ -207,10 +208,6 @@ img {
     object-fit: cover;
     height: 100%;
     width: 100%;
-}
-#current-link{
-    background-color: black;
-    color: white;
 }
 .ul_div{
     background-color: var(--themeColor);
@@ -382,6 +379,10 @@ ul{
     }
     .hide-on-phone{
         display: none;
+    }
+    #prog-sec{
+        align-self: center;
+        justify-self: center;
     }
 }
 @media screen and (min-width: 501px){
@@ -569,4 +570,9 @@ ul{
     #slideshow:hover{
         box-shadow: 0 4px 10px rgba(0, 0, 0, 4);
     }
+}
+
+.current-link{
+    background-color: black;
+    color: white;
 }
