--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h2{
 
 .card-img{
     width: 100%;
-    height: 35%;
+    height: 150px;
     border-radius: 3px 3px 0px 0px;
     object-fit: cover;
 }
